--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.1.*",
         "illuminate/html": "^5.0",
         "guzzlehttp/guzzle": "6.0",
-        "bugsnag/bugsnag-laravel": "1.*"
+        "bugsnag/bugsnag-laravel": "1.*",
+        "msurguy/honeypot": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
